Playlist_based_Weather

--- a/templates/play.html
+++ b/templates/play.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Weather-based Spotify Playlist</title>
+    <title>Weather-based Spotify Playlists</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,28 +13,16 @@
             text-align: center;
             margin-top: 50px;
         }
-        .playlist-container img {
-            max-width: 300px;
-            border-radius: 10px;
+        .playlist {
+            margin-bottom: 50px;
         }
-        .playlist-container h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
+        .playlist h2 {
+            font-size: 1.5em;
         }
-        .playlist-container p {
-            font-size: 1.2em;
-        }
-        .playlist-container a {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #1DB954;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 50px;
-        }
-        .playlist-container a:hover {
-            background-color: #1ed760;
+        iframe {
+            border: none;
+            width: 300px;
+            height: 380px;
         }
     </style>
 </head>
@@ -42,13 +30,16 @@
     <div class="playlist-container">
         <h1>Current Weather: {{ weather_description }}</h1>
         <p>Selected Genre: <strong>{{ genre }}</strong></p>
-        <h2>Now Playing: {{ playlist_name }}</h2>
-        {% if playlist_image %}
-            <img src="{{ playlist_image }}" alt="{{ playlist_name }}">
-        {% endif %}
-        <p>
-            <a href="{{ playlist_uri }}">Open Playlist in Spotify</a>
-        </p>
+        <h2>Select a Playlist to Play</h2>
+        {% for playlist in playlists %}
+            <div class="playlist">
+                <h2>{{ playlist.name }}</h2>
+                {% if playlist.image %}
+                    <img src="{{ playlist.image }}" alt="{{ playlist.name }}" width="200">
+                {% endif %}
+                <iframe src="{{ playlist.embed_url }}" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+        {% endfor %}
     </div>
 </body>
 </html>
