--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}Newspaper App{% endblock title %}</title>
+  <title>{% block title %}SoundClouded{% endblock title %}</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -35,13 +35,11 @@
                 {{ user.username }}
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="{% url 'password_change' %}">
-                  Change password</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li>
-                  <form method="post" action="{% url 'logout' %}" 
+                  <form method="post" action="{% url 'account_logout' %}" 
                     style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-link nav-link"
@@ -55,8 +53,8 @@
         </div>
         <div class="mr-auto">
           <form class="form d-flex">
-            <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-            <a href="{% url 'signup' %}" class="btn btn-primary ms-2">Sign up</a>
+            <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-primary ms-2">Sign up</a>
           </form>
         </div>
         {% endif %}
