--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,6 +5,7 @@
     {% trans "Sign In" %}
 {% endblock head_title %}
 {% block content %}
+<p>WIUGYEWRNOIVYFPWORHONERIVHOEWRHGKL</p>
     {% element h1 %}
         {% trans "Sign In" %}
     {% endelement %}
