--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
     {% endif %}
 
     <hr style="border-color: #FF7F50;">
-
+    {% if user.is_authenticated %}
     <!-- Weather Search Feature -->
     <div class="mt-4" style="color: #c0bebe;">
         <h3 style="color: #FF7F50; text-shadow: 1px 1px 2px black;">Get Music Recommendations Based on the Weather</h3>
@@ -93,7 +93,7 @@
         }
     });
 </script>
-
+{% endif %}
 <!-- Include jQuery and Bootstrap JS -->
 <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
