--- a/templates/play.html
+++ b/templates/play.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% if user.is_authenticated %}
     <meta charset="UTF-8">
     <title>Weather-based Spotify Playlists</title>
     <!-- Include Bootstrap CSS -->
@@ -194,3 +195,4 @@
     </script>
 </body>
 </html>
+{% endif %}
