--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}SoundClouded{% endblock title %}</title>
+  <link rel="icon" type="image/png" href="{% static 'soundclouded.png' %}">
+  <title class="accent-color">{% block title %}SoundClouded{% endblock title %}</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
@@ -63,13 +65,21 @@
           background-color: #1ED760;
           color: #121212;
       }
+      .navbar-brand img {
+          height: 70px;
+          width: auto;
+          object-fit: contain;
+}
   </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand accent-color" href="{% url 'home' %}">SoundClouded</a>
+      <a class="navbar-brand accent-color d-flex align-items-center" href="{% url 'home' %}">
+        <img src="{% static 'soundclouded.png' %}" alt="SoundClouded Logo" height="30" class="me-2">
+        SoundClouded
+      </a>
       <button class="navbar-toggler" type="button" 
         data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" 
