--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,17 +1,47 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load allauth account %}
-{% block head_title %}
+{% load allauth account socialaccount %}
+
+{% block title %}
     {% trans "Sign In" %}
-{% endblock head_title %}
+{% endblock title %}
+
 {% block content %}
-    {% if SOCIALACCOUNT_ENABLED %}
-        {% include "socialaccount/snippets/login.html" %}
-    {% endif %}
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6 col-lg-4">
+        <div class="text-center mb-5">
+            <h1 class="accent-color">Welcome to SoundClouded</h1>
+            <p class="mt-3">Connect with your Spotify account to get started</p>
+        </div>
+
+        {% get_providers as socialaccount_providers %}
+        
+        {% for provider in socialaccount_providers %}
+            {% if provider.id == "spotify" %}
+                <div class="d-grid gap-2">
+                    <a href="{% provider_login_url 'spotify' process='login' %}"
+                       class="btn btn-accent btn-lg">
+                        <div class="d-flex align-items-center justify-content-center">
+                            <!-- Spotify Icon (you can replace with your own SVG or icon) -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="me-2" viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.669 11.538a.498.498 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686zm.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858zm.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288z"/>
+                            </svg>
+                            Continue with Spotify
+                        </div>
+                    </a>
+                </div>
+            {% endif %}
+        {% endfor %}
+
+        {% if messages %}
+            <div class="mt-4">
+                {% for message in messages %}
+                    <div class="alert {% if message.tags == 'error' %}alert-danger{% else %}alert-info{% endif %}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+</div>
 {% endblock content %}
-{% block extra_body %}
-    {{ block.super }}
-    {% if PASSKEY_LOGIN_ENABLED %}
-        {% include "mfa/webauthn/snippets/login_script.html" with button_id="passkey_login" %}
-    {% endif %}
-{% endblock %}
