removed some testing code

--- a/templates/home.html
+++ b/templates/home.html
@@ -56,7 +56,7 @@
             <!-- Playlist Information -->
             <div class="col-md-8">
                 <div class="playlist-container text-center">
-                    <h2 class="accent-color">Recommended Playlist: {{ playlist_name }} {{ keyword }} {{ offset }}</h2>
+                    <h2 class="accent-color">Recommended Playlist: {{ playlist_name }}</h2>
                     <!-- Spotify Embed Widget -->
                     <iframe 
                         src="https://open.spotify.com/embed/playlist/{{ playlist_id }}" 
