Final sprint review time!
imperial instead of metric units

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,9 +46,9 @@
                         <img src="{{ weather_data.icon }}" alt="Weather Icon">
                     {% endif %}
                     <h2>{{ weather_data.description }}</h2>
-                    <p>Temperature: {{ weather_data.temperature }}°C</p>
-                    <p>Feels Like: {{ weather_data.feelslike }}°C</p>
-                    <p>Wind: {{ weather_data.wind_speed }} km/h {{ weather_data.wind_dir }}</p>
+                    <p>Temperature: {{ weather_data.temperature }}°F</p>
+                    <p>Feels Like: {{ weather_data.feelslike }}°F</p>
+                    <p>Wind: {{ weather_data.wind_speed }} mph {{ weather_data.wind_dir }}</p>
                     <p>Humidity: {{ weather_data.humidity }}%</p>
                 </div>
             </div>
